fix (header.css): adjust z-index for header to ensure proper stacking context

--- a/pages/assets/css/header.css
+++ b/pages/assets/css/header.css
@@ -1,6 +1,7 @@
 /* HEADER */
 header {
     position: relative;
+    z-index: 10000;
     background-color: #1C1C1C;
     color: #CC8833;
     padding: 10px;
